--- a/global.css
+++ b/global.css
@@ -210,17 +210,20 @@ textarea {
 }
 
 /* new in v2 */
+
 .toggle-label.v2:after {
   left: 3px;
-  /* width: calc(50% - 6px) !important; */
+  width: calc(50% - 6px) !important;
   height: calc(100% - 6px);
   border-radius: 4px;
   transition: 0.3s;
+  transform: translateZ(0);
+  will-change: left;
 }
 
 .checkbox-default:checked + .toggle-label.v2:after {
-  left: calc(100% - 3px);
-  transform: translateX(-100%);
+  left: calc(100% - 3px) !important;
+  /* transform: translateX(-100%) !important; */
 }
 
 /* secondary navbar nav items inbox/datasources */
