--- a/inbox.css
+++ b/inbox.css
@@ -28,9 +28,9 @@
   margin-right: 0px;
 } */
 
-.message-wrap.agent {
+/* .message-wrap.agent {
   margin-bottom: 10px;
-}
+} */
 
 /* .message-wrap a {
   color: #333 !important;
