--- a/global.css
+++ b/global.css
@@ -266,3 +266,30 @@ textarea {
 .secondary-header-container .list-item:hover .list-item-icon-container {
   transform: scale(1.06);
 }
+
+/* skeleton loader */
+.skeleton-loader {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  border-radius: inherit;
+  background: linear-gradient(to right, #fdfdfd 25%, #f5f5f5 50%, #fdfdfd 75%);
+  background-size: 200% 100%;
+  z-index: 1;
+  animation: skeleton 1s infinite linear;
+}
+
+@keyframes skeleton {
+  0% {
+    background-position: -100% 0;
+  }
+  100% {
+    background-position: 100% 0;
+  }
+}
+
+[code-skeleton] {
+  background-clip: padding-box;
+}
