--- a/global.css
+++ b/global.css
@@ -208,6 +208,20 @@ textarea {
   resize: none;
 }
 
+/* hide scrollbars */
+.scrollable {
+  -ms-overflow-style: none; /* internet explorer, edge */
+  scrollbar-width: none; /* firefox */
+  overflow-y: scroll; /* allow scroll */
+}
+.scrollable::-webkit-scrollbar {
+  display: none; /* chrome, safari, and opera */
+}
+
+.popup-underlay {
+  display: none;
+}
+
 /* charcount */
 .charcount {
   display: none;
