--- a/icons.css
+++ b/icons.css
@@ -1,23 +1,3 @@
-[icon-color='black'] {
-  color: #000;
-}
-
-[icon-color='white'] {
-  color: #fff;
-}
-
-[icon-color='warning'] {
-  color: #e7b549;
-}
-
-[icon-color='error'] {
-  color: #e74c3c;
-}
-
-[icon-color='primary'] {
-  color: #542cc1;
-}
-
 [icon-size='micro'] {
   font-size: 12px;
 }
@@ -44,4 +24,57 @@
 
 [icon-flip='vertical'] {
   transform: scaleY(-1);
+}
+
+[icon-color='black'] {
+  color: #000;
+}
+
+[icon-color='white'] {
+  color: #fff;
+}
+
+[icon-color='warning'] {
+  color: #e7b549;
+}
+
+[icon-color='error'] {
+  color: #e74c3c;
+}
+
+[icon-color='primary'] {
+  color: #542cc1;
+}
+
+[icon-color='blue-grad'] {
+  color: linear-gradient(to right, #0679e5, #0047b3);
+  background: linear-gradient(to right, #0679e5, #0047b3);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  display: inline-block;
+}
+
+[icon-color='purple-grad'] {
+  background: linear-gradient(60deg, #a689e6, #754ad4);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  display: inline-block;
+}
+
+[icon-color='orange-grad'] {
+  background: linear-gradient(60deg, #ffc56f, #eb9f2f);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  display: inline-block;
+}
+
+[icon-color='green-grad'] {
+  background: linear-gradient(60deg, #00b300, #008000);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  display: inline-block;
 }
