--- a/global.css
+++ b/global.css
@@ -293,8 +293,15 @@ textarea {
 /* secondary navbar nav items inbox/datasources */
 
 .list-item.selected {
-  background-color: #f7f7ff;
+  background-color: #f1f1f1;
   border-color: #f3f3ff;
+}
+.list-item.selected:hover {
+  background-color: #f7f7f7;
+  border-color: #f3f3ff;
+}
+.list-item:hover {
+  background-color: #f7f7f7;
 }
 .list-item.selected .list-item-icon-container {
   /* background-color: #7e79f0; */
