--- a/form-builder/form-builder.css
+++ b/form-builder/form-builder.css
@@ -8,7 +8,7 @@ body {
   min-height: 100vh;
   background: #ffffff;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica', 'Arial', sans-serif;
-  color: #0a0a0a;
+  color: #0a0a0a;a
   font-weight: 400;
   -webkit-font-smoothing: antialiased;
 }
@@ -45,14 +45,17 @@ body {
 /* Form Fields */
 .form-field-wrapper {
   position: relative;
-  margin-left: -32px;
-  padding-left: 32px;
+  margin-left: -60px;
+  margin-right: -60px;
+  padding-left: 60px;
+  padding-right: 60px;
 }
 
 .form-field-controls {
   position: absolute;
-  left: -50px;
-  width: auto;
+  width: 68px;
+  min-width: 68px;
+  left: -20px;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -63,6 +66,7 @@ body {
   top: 7px;
   transform: translateY(-50%);
   height: 20px;
+  align-items: end;
 }
 
 .form-field-wrapper:hover .form-field-controls,
@@ -103,6 +107,7 @@ body {
 
 .form-field-preview {
   margin-bottom: 16px;
+  margin-top: 16px;
   display: flex;
   flex-direction: column;
   align-items: stretch;
