--- a/icons.css
+++ b/icons.css
@@ -72,7 +72,7 @@
 }
 
 [icon-color='green-grad'] {
-  background: linear-gradient(60deg, #8af059, #3bc14d);
+  background: linear-gradient(60deg, #a6dd52, #179128);
   -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
