--- a/global.css
+++ b/global.css
@@ -99,7 +99,7 @@ label {
 /* purple text */
 /* Default state: purple text for .false, black icon hidden, purple icon visible */
 .checkbox-default.purple + .toggle-label .toggle-text-container.false {
-  color: #7e79f0;
+  color: #7a50ed;
 }
 .checkbox-default.purple + .toggle-label .toggle-text-container.false .checkbox-icon.black {
   display: none;
@@ -132,7 +132,7 @@ label {
 
 /* Checked state: true text purple, black icon hidden, purple icon visible */
 .checkbox-default.purple:checked + .toggle-label .toggle-text-container.true {
-  color: #7e79f0;
+  color: #7a50ed;
 }
 .checkbox-default.purple:checked + .toggle-label .toggle-text-container.true .checkbox-icon.black {
   display: none;
@@ -143,8 +143,8 @@ label {
 
 /* simple checkbox */
 .checkbox-simple-input:checked + label {
-  background-color: #7e79f0 !important;
-  color: #7e79f0;
+  background-color: #7a50ed !important;
+  color: #7a50ed;
 }
 
 /* radio btns - status indicators */
@@ -158,9 +158,9 @@ label {
 
 /* multi-select boxes */
 .multi-select-checkbox.selected .multiple-select-radiobtn {
-  outline-color: #7e79f0;
+  outline-color: #7a50ed;
   outline-width: 2px;
-  background-color: #7e79f0;
+  background-color: #7a50ed;
 }
 
 /* dropdown select boxes */
@@ -304,7 +304,7 @@ textarea {
   background-color: #f7f7f7;
 }
 .list-item.selected .list-item-icon-container {
-  /* background-color: #7e79f0; */
+  /* background-color: #7a50ed; */
   background-color: #794fec;
   border-color: #a19dff !important;
 }
